# python-base-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/requirements/: base.in  dev.in  dev.txt  prod.txt  update_reqs.sh  upgrade_reqs.sh
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_your_project_i.py
{{cookiecutter.project_slug}}/tests/unit/: test_api.py  test_your_project_u.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/routers/: health.py
