# setup.cfg

[metadata]
name =  {{cookiecutter.project_slug}}
version = attr: {{cookiecutter.project_slug}}.__version__
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
# keywords = ...
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}.__main__:main

[options]
package_dir =
    {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}

[bumpver]
current_version = 0.1.0
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version to {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
{{cookiecutter.project_slug}}/__init__.py =
    __version__ = "{version}"
setup.cfg =
    current_version = {version}
README.md =
    {{cookiecutter.project_slug}} v{version}

[tool:pytest]
minversion = 3.10
addopts = -v -p no:warnings
testpaths =
    tests
markers =
    unstable: test is unstable as it depends on the existence of external resources
    use_internet: test is stable but internet connection is needed

[mypy]
ignore_missing_imports = True
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[isort]
force_single_line = True
profile = black

[flake8]
ignore =
    W503
    W601
    W605
    E203
    # F401
max-line-length = 160
max-complexity = 18
